fix: Namespace of the vaultauth

--- a/components/terraform/vault-provisioning/manifests/vaultpkisecret.yaml
+++ b/components/terraform/vault-provisioning/manifests/vaultpkisecret.yaml
@@ -8,8 +8,8 @@ spec:
   # If no value is specified the Operator will default to the default VaultAuth,
   # configured in its own Kubernetes namespace.
   vaultAuthRef: default
-  # Namespace in Vault to get secrets from
-  namespace: tenant-1
+  # Namespace of the vaultauth
+  # namespace: tenant-1
   mount: pki
   name: nginx
   destination:
