--- a/Vault-Deployment/values/vault-values.yaml
+++ b/Vault-Deployment/values/vault-values.yaml
@@ -14,8 +14,11 @@ server:
   auditStorage:
     enabled: true
     size: 1Gi
+  # authDelegator enables a cluster role binding to be attached to the service
+  # account.  This cluster role binding can be used to setup Kubernetes auth
+  # method.  https://www.vaultproject.io/docs/auth/kubernetes.html
   authDelegator:
-    enabled: false
+    enabled: true
   extraEnvironmentVars:
     VAULT_CACERT: /vault/userconfig/vault-ha-tls/vault-playground-cert.ca
     VAULT_TLSCERT: /vault/userconfig/vault-ha-tls/vault-playground-cert.crt
