chore: run all pre-commit hooks

--- a/Vault-Deployment/values/openldap.yaml
+++ b/Vault-Deployment/values/openldap.yaml
@@ -1,3 +1,4 @@
+---
 # Default values for openldap.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
@@ -6,18 +7,18 @@
 # Please, note that this will override the image parameters, including dependencies, configured to use the global value
 # Current available global Docker image parameters: imageRegistry, imagePullSecrets and storageClass
 global:
-  imageRegistry: ""
+  imageRegistry: ''
   ## E.g.
   ## imagePullSecrets:
   ##   - myRegistryKeySecretName
   ##
   #imagePullSecrets: [""]
   ## ldapDomain , can be explicit (e.g dc=toto,c=ca) or domain based (e.g example.com)
-  ldapDomain: "playground.lab"
+  ldapDomain: playground.lab
   # Specifies an existing secret to be used for admin and config user passwords. The expected key are LDAP_ADMIN_PASSWORD and LDAP_CONFIG_ADMIN_PASSWORD.
   # existingSecret: ""
   ## Default Passwords to use, stored as a secret. Not used if existingSecret is set.
-  adminPassword:  Not@SecurePassw0rd
+  adminPassword: Not@SecurePassw0rd
   configPassword: Not@SecurePassw0rd
   ldapPort: 389
   sslLdapPort: 636
@@ -26,13 +27,13 @@ global:
 
 ## @param kubeVersion Override Kubernetes version
 ##
-kubeVersion: ""
+kubeVersion: ''
 ## @param nameOverride String to partially override common.names.fullname
 ##
-nameOverride: ""
+nameOverride: ''
 ## @param fullnameOverride String to fully override common.names.fullname
 ##
-fullnameOverride: ""
+fullnameOverride: ''
 ## @param commonLabels Labels to add to all deployed objects
 ##
 commonLabels: {}
@@ -68,7 +69,7 @@ customTLS:
   image:
     repository: alpine/openssl
     tag: latest
-  secret: ""  # The name of a kubernetes.io/tls type secret to use for TLS
+  secret: ''  # The name of a kubernetes.io/tls type secret to use for TLS
 ## Add additional labels to all resources
 extraLabels: {}
 
@@ -91,21 +92,21 @@ service:
 # Use the env variables from https://hub.docker.com/r/bitnami/openldap/
 # Be careful, do not modify the following values unless you know exactly what your are doing
 env:
- BITNAMI_DEBUG: "true"
- LDAP_LOGLEVEL: "256"
- LDAP_TLS_ENFORCE: "false"
- LDAPTLS_REQCERT: "never"
- LDAP_ENABLE_TLS: "yes"
- LDAP_CONFIG_ADMIN_ENABLED: "yes"
- LDAP_CONFIG_ADMIN_USERNAME: "admin"
- LDAP_SKIP_DEFAULT_TREE: "no"
+  BITNAMI_DEBUG: 'true'
+  LDAP_LOGLEVEL: '256'
+  LDAP_TLS_ENFORCE: 'false'
+  LDAPTLS_REQCERT: never
+  LDAP_ENABLE_TLS: yes
+  LDAP_CONFIG_ADMIN_ENABLED: yes
+  LDAP_CONFIG_ADMIN_USERNAME: admin
+  LDAP_SKIP_DEFAULT_TREE: no
 
 # Pod Disruption Budget for Stateful Set
 # Disabled by default, to ensure backwards compatibility
 pdb:
   enabled: false
   minAvailable: 1
-  maxUnavailable: ""
+  maxUnavailable: ''
 
 ## User list to create (comma separated list) , can't be use with customLdifFiles
 ## Default set by bitnami image
@@ -222,12 +223,12 @@ customLdifFiles:
 replication:
   enabled: true
   # Enter the name of your cluster, defaults to "cluster.local"
-  clusterName: "cluster.local"
+  clusterName: cluster.local
   retry: 60
   timeout: 1
   interval: 00:00:00:10
-  starttls: "critical"
-  tls_reqcert: "never"
+  starttls: critical
+  tls_reqcert: never
 ## Persist data to a persistent volume
 persistence:
   enabled: true
@@ -241,9 +242,9 @@ persistence:
   # storageClass: "standard-singlewriter"
   # existingClaim: openldap-pvc
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   size: 8Gi
-  storageClass: ""
+  storageClass: ''
 
 ## @param customLivenessProbe Custom livenessProbe that overrides the default one
 ##
@@ -305,7 +306,7 @@ podAnnotations: {}
 ## @param podAffinityPreset Pod affinity preset. Ignored if `affinity` is set. Allowed values: `soft` or `hard`
 ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
 ##
-podAffinityPreset: ""
+podAffinityPreset: ''
 ## @param podAntiAffinityPreset Pod anti-affinity preset. Ignored if `affinity` is set. Allowed values: `soft` or `hard`
 ## ref: https://kubernetes.io/docs/concepts/scheduling-eviction/assign-pod-node/#inter-pod-affinity-and-anti-affinity
 ##
@@ -316,10 +317,10 @@ podAntiAffinityPreset: soft
 nodeAffinityPreset:
   ## @param nodeAffinityPreset.type Node affinity preset type. Ignored if `affinity` is set. Allowed values: `soft` or `hard`
   ##
-  type: ""
+  type: ''
   ## @param nodeAffinityPreset.key Node label key to match. Ignored if `affinity` is set
   ##
-  key: ""
+  key: ''
   ## @param nodeAffinityPreset.values Node label values to match. Ignored if `affinity` is set
   ## E.g.
   ## values:
@@ -350,11 +351,11 @@ updateStrategy:
   type: RollingUpdate
 ## @param priorityClassName OPENLDAP  pods' priorityClassName
 ##
-priorityClassName: ""
+priorityClassName: ''
 ## @param schedulerName Name of the k8s scheduler (other than default) for OPENLDAP  pods
 ## ref: https://kubernetes.io/docs/tasks/administer-cluster/configure-multiple-schedulers/
 ##
-schedulerName: ""
+schedulerName: ''
 ## @param lifecycleHooks for the OPENLDAP  container(s) to automate configuration before or after startup
 ##
 lifecycleHooks: {}
@@ -407,7 +408,7 @@ serviceAccount:
   ## @param serviceAccount.name The name of the ServiceAccount to use.
   ## If not set and create is true, a name is generated using the common.names.fullname template
   ##
-  name: ""
+  name: ''
 
 ## @section Init Container Parameters
 
@@ -494,7 +495,7 @@ test:
 
 ## ltb-passwd
 ltb-passwd:
-  enabled : true
+  enabled: true
   image:
     tag: 5.2.3
   ingress:
@@ -504,7 +505,7 @@ ltb-passwd:
     pathType: Prefix
     ## Ingress Host
     hosts:
-    - "ssl-ldap2.playground.lab"
+    - ssl-ldap2.playground.lab
   # ldap:
     # if you want to restrict search base tree for users instead of complete domain
     # searchBase: "ou=....,dc=mydomain,dc=com"
@@ -519,7 +520,7 @@ phpldapadmin:
   image:
     tag: 0.9.0
   env:
-    PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: "never"
+    PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT: never
   ingress:
     enabled: true
     annotations: {}
