--- a/Provisioning/Vault/manifests/vaultpkisecret.yaml
+++ b/Provisioning/Vault/manifests/vaultpkisecret.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets.hashicorp.com/v1alpha1
+apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultPKISecret
 metadata:
   name: vaultpkisecret-tls
@@ -11,7 +11,8 @@ spec:
   # Namespace of the vaultauth
   # namespace: tenant-1
   mount: pki
-  name: nginx
+  commonName: nginx
+  role: default
   destination:
     create: true
     name: pki-tls
