--- a/Provisioning/Vault/manifests/vaultauth.yaml
+++ b/Provisioning/Vault/manifests/vaultauth.yaml
@@ -1,4 +1,4 @@
-apiVersion: secrets.hashicorp.com/v1alpha1
+apiVersion: secrets.hashicorp.com/v1beta1
 kind: VaultAuth
 metadata:
   namespace: tenant-1
