--- a/Vault-Deployment/values/vault-values.yaml
+++ b/Vault-Deployment/values/vault-values.yaml
@@ -96,12 +96,24 @@ server:
         storage "raft" {
           path = "/vault/data"
           retry_join {
-            leader_tls_servername = "vault-internal"           
-            leader_api_addr = "https://vault-active:8200"
+            leader_api_addr = "https://vault-0.vault-internal:8200"
             leader_client_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.crt"
             leader_client_key_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.key"
             leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.ca"
           }
+          retry_join {
+            leader_api_addr = "https://vault-1.vault-internal:8200"
+            leader_client_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.crt"
+            leader_client_key_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.key"
+            leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.ca"
+          }
+          retry_join {
+            leader_api_addr = "https://vault-2.vault-internal:8200"
+            leader_client_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.crt"
+            leader_client_key_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.key"
+            leader_ca_cert_file = "/vault/userconfig/vault-ha-tls/vault-playground-cert.ca"
+          }
+
 
           autopilot {
             cleanup_dead_servers = "true"
