--- a/Vault-Deployment/values/kube-prometheus-stack-values.yaml
+++ b/Vault-Deployment/values/kube-prometheus-stack-values.yaml
@@ -867,7 +867,7 @@ grafana:
 
   ## Configure additional grafana datasources (passed through tpl)
   ## ref: http://docs.grafana.org/administration/provisioning/#datasources
-  additionalDataSources: []
+  additionalDataSources:
   # - name: prometheus-sample
   #   access: proxy
   #   basicAuth: true
@@ -880,6 +880,28 @@ grafana:
   #   type: prometheus
   #   url: https://{{ printf "%s-prometheus.svc" .Release.Name }}:9090
   #   version: 1
+
+  # https://grafana.com/docs/grafana/latest/datasources/loki
+  - name: Promtail
+    type: loki
+    access: proxy
+    url: http://loki.loki.svc.cluster.local:3100
+    orgId: 1
+    jsonData:
+      maxLines: 1000
+      httpHeaderName1: "X-Scope-OrgID"
+    secureJsonData:
+      httpHeaderValue1: "promtail"
+  - name: Vault Audit Log
+    type: loki
+    access: proxy
+    url: http://loki.loki.svc.cluster.local:3100
+    orgId: 1
+    jsonData:
+      maxLines: 1000
+      httpHeaderName1: "X-Scope-OrgID"
+    secureJsonData:
+      httpHeaderValue1: "vault-audit"
 
   ## Passed to grafana subchart and used by servicemonitor below
   ##
