--- a/Vault-Deployment/values/otlp.yaml
+++ b/Vault-Deployment/values/otlp.yaml
@@ -4,6 +4,9 @@ replicaCount: 1
 config:
   receivers:
     tcplog:
+      attributes:
+        # this attribute is processed below as loki label
+        application: vault
       listen_address: "0.0.0.0:54525"
   exporters:
     loki:
@@ -12,10 +15,24 @@ config:
       # Send everything to the vault-audit tenant_id
       # https://grafana.com/docs/loki/latest/operations/multi-tenancy
         "X-Scope-OrgID": vault-audit
+  processors:
+    attributes:
+      actions:
+        # set the attribute from the receiver as loki label
+        - action: insert
+          key: loki.attribute.labels
+          value: application
+    resource:
+      attributes:
+      # use raw format to enable json
+      - action: insert
+        key: loki.format
+        value: raw
   service:
     pipelines:
       logs:
         receivers: [tcplog]
+        processors: [attributes,resource]
         exporters: [loki]
 ports:
   tcplog:
