feat(alerting): enable remote write receiver in prom

--- a/Vault-Deployment/values/kube-prometheus-stack-values.yaml
+++ b/Vault-Deployment/values/kube-prometheus-stack-values.yaml
@@ -2728,7 +2728,7 @@ prometheus:
 
     ## enable --web.enable-remote-write-receiver flag on prometheus-server
     ##
-    enableRemoteWriteReceiver: false
+    enableRemoteWriteReceiver: true
 
     ## Name of the external label used to denote replica name
     ##
