Configure Grafana alerting (#29)
* fix: dependency apply ingress in ns
* feat(alerting): enable remote write receiver in prom
* fix: missing key in yaml file
* feat(alerting): configure loki ruler
* feat(alerting): apply loki alerting rules
* doc(alerting): document Loki logging and Grafana alerting
* doc(alerting): document difference between recording/alerting
* fix: separate loki from prom rules

--- a/Vault-Deployment/values/kube-prometheus-stack-values.yaml
+++ b/Vault-Deployment/values/kube-prometheus-stack-values.yaml
@@ -854,11 +854,11 @@ grafana:
         # datasourceUid: Jaeger
         # traceIdLabelName: trace_id
 
-  extraConfigmapMounts: []
-  # - name: certs-configmap
-  #   mountPath: /etc/grafana/ssl/
-  #   configMap: certs-configmap
-  #   readOnly: true
+  extraConfigmapMounts:
+  - name: prometheus-alerting-rules
+    mountPath: /etc/grafana/provisioning/alerting/
+    configMap: prometheus-alerting-rules
+    readOnly: true
 
   deleteDatasources: []
   # - name: example-datasource
@@ -2728,7 +2728,7 @@ prometheus:
 
     ## enable --web.enable-remote-write-receiver flag on prometheus-server
     ##
-    enableRemoteWriteReceiver: false
+    enableRemoteWriteReceiver: true
 
     ## Name of the external label used to denote replica name
     ##
